# CoexistenceBoardChain

./: Dockerfile  README.md  pyproject.toml
backend/: main.py
backend/ai/: ai_integration.py
backend/firebase/: firebase_auth.py  firebase_db.py
backend/game/: endpoints.py
backend/middleware/: auth_middleware.py
config/: settings.py
frontend/: app.js  index.html
telegram_bot/: bot.py
tests/: test_auth.py  test_game_logic.py  test_websockets.py
